# gptokeyb

./: CMakeLists.txt  README.md  gptokeyb.cpp
configs/: default.gptk
src/: analog.cpp  config.cpp  gptokeyb.cpp  gptokeyb.h  input.cpp  keyboard.cpp  structs.h  util.cpp  xbox360.cpp
